--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -8,12 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foundation for Sites</title>
     <link rel="stylesheet" href="{{root}}assets/css/app.css">
+    <link rel="stylesheet" href="{{root}}assets/vendor/MaterialDesign-Webfont-master/css/materialdesignicons.min.css">
   </head>
   <body>
 
     {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
     {{> body}}
 
-    <script src="{{root}}assets/js/app.js"></script>
+    <script src="{{root}}assets/js/nexus-ui.js"></script>
   </body>
 </html>
